.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/Timesheet_Approver__c.object-meta.xml
<CustomObject>
    <label>Timesheet Approver</label>
    <nameField>
        <displayFormat>TSA-{0000000}</displayFormat>
        <label>Timesheet Approver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>