.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Timesheet Approvers</relationshipLabel>
    <relationshipName>Timesheet_Approvers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>