.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/fields/Account_Approval_Method__c.field-meta.xml
<CustomField>
    <fullName>Account_Approval_Method__c</fullName>
    <formula>TEXT(Account__r.Primary_Approval_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Approval Method</label>
    <type>Text</type>
</CustomField>