.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/fields/Approval_Method__c.field-meta.xml
<CustomField>
    <fullName>Approval_Method__c</fullName>
    <label>DEPRECIATED Approval Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PIN and Signature</fullName>
                <default>true</default>
                <label>PIN and Signature</label>
            </value>
            <value>
                <fullName>PIN Only</fullName>
            </value>
            <value>
                <fullName>Signature Only</fullName>
            </value>
            <value>
                <fullName>Secondary Approver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>