.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/fields/Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Name__c</fullName>
    <formula>IF(ISBLANK(Contact__c),  Temp_Approver_Name__c,  Contact__r.FirstName + &apos; &apos; + Contact__r.LastName)</formula>
    <label>Approver Name</label>
    <type>Text</type>
</CustomField>