.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/fields/Approver_Position__c.field-meta.xml
<CustomField>
    <fullName>Approver_Position__c</fullName>
    <formula>IF(ISBLANK(Contact__c),  Temp_Approver_Position__c,  Contact__r.Title)</formula>
    <label>Approver Position</label>
    <type>Text</type>
</CustomField>