.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Timesheet Approvers</relationshipLabel>
    <relationshipName>Timesheet_Approvers_Person</relationshipName>
    <type>Lookup</type>
</CustomField>