.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/fields/Flow_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Display_Name__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Contact__r.FirstName)),
    Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName,
    Temp_Approver_Name__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow Display Name</label>
    <type>Text</type>
</CustomField>