.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/fields/Last_Shift_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Shift_Approval_Date__c</fullName>
    <label>Last Shift Approval Date</label>
    <type>DateTime</type>
</CustomField>