.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/fields/PIN_Number__c.field-meta.xml
<CustomField>
    <fullName>PIN_Number__c</fullName>
    <label>PIN Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>