.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/fields/Temp_Approver_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Temp_Approver_Mobile__c</fullName>
    <label>Temp Approver Mobile</label>
    <length>15</length>
    <type>Text</type>
</CustomField>