.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/fields/Temp_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Temp_Approver_Name__c</fullName>
    <label>Temp Approver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>