.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/fields/Temp_PIN_Expired__c.field-meta.xml
<CustomField>
    <fullName>Temp_PIN_Expired__c</fullName>
    <formula>IF(
    AND(
								CONTAINS(Account_Approval_Method__c, &quot;PIN&quot;),
        ISBLANK(Temp_Approver_Mobile__c ),
								RecordType.Name = &apos;Temporary Approver&apos;
    ),
    TRUE,
    IF(
        NOT(ISBLANK(Contact__c)),
        FALSE,
        (NOW() - PIN_Number_Generated__c) * 24 &gt; 24
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temp PIN Expired</label>
    <type>Checkbox</type>
</CustomField>