.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/fields/Timesheet_Approver__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPRECIATED Timesheet Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Timesheet Approvers</relationshipLabel>
    <relationshipName>Timesheet_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>