.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/recordTypes/Standard_Approver.recordType-meta.xml
<RecordType>
    <fullName>Standard_Approver</fullName>
    <active>true</active>
    <description>Used to signify this is a Standard Timesheet Approver</description>
    <label>Standard Approver</label>
</RecordType>