.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/recordTypes/Temporary_Approver.recordType-meta.xml
<RecordType>
    <fullName>Temporary_Approver</fullName>
    <active>true</active>
    <description>Used to signify this is a Temporary Timesheet Approver</description>
    <label>Temporary Approver</label>
</RecordType>