.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/validationRules/Primary_Approval_Method_cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Approval_Method_cannot_be_empty</fullName>
    <active>true</active>
    <description>The Account &gt; Primary Approval Method must be set.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Contact__c)),
    ISBLANK(TEXT(Account__r.Primary_Approval_Method__c))
)</errorConditionFormula>
    <errorMessage>The Account &gt; Primary Approval Method must be set.</errorMessage>
</ValidationRule>