.vscode/allianceuat_compare/force-app/main/default/objects/Timesheet_Approver__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approval_Method__c</columns>
    <columns>Timesheet_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>